add IsGasPriceZero; add single-command service enabling
