# internal/api_ui/api.gen.go
@@ -1,6 +1,6 @@
 // Package api_ui provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.13.0 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.12.4 DO NOT EDIT.
 package api_ui
 
 import (
@@ -311,6 +311,9 @@ type LinkID = uuid.UUID
 // PathNonce defines model for pathNonce.
 type PathNonce = int64
 
+// PathStateHash defines model for pathStateHash.
+type PathStateHash = string
+
 // SessionID defines model for sessionID.
 type SessionID = uuid.UUID
 
@@ -415,6 +418,12 @@ type GetLinkQRCodeParams struct {
 	SessionID SessionID `form:"sessionID" json:"sessionID"`
 }
 
+// GetRevocationStatusParams defines parameters for GetRevocationStatus.
+type GetRevocationStatusParams struct {
+	// StateHash Identity state hash
+	StateHash *PathStateHash `form:"state_hash,omitempty" json:"state_hash,omitempty"`
+}
+
 // GetSchemasParams defines parameters for GetSchemas.
 type GetSchemasParams struct {
 	// Query Query string to do full text search in schema types and attributes.
@@ -515,7 +524,7 @@ type ServerInterface interface {
 	CreateLinkQrCode(w http.ResponseWriter, r *http.Request, id Id)
 	// Get Revocation Status
 	// (GET /v1/credentials/revocation/status/{nonce})
-	GetRevocationStatus(w http.ResponseWriter, r *http.Request, nonce PathNonce)
+	GetRevocationStatus(w http.ResponseWriter, r *http.Request, nonce PathNonce, params GetRevocationStatusParams)
 	// Revoke Credential
 	// (POST /v1/credentials/revoke/{nonce})
 	RevokeCredential(w http.ResponseWriter, r *http.Request, nonce PathNonce)
@@ -579,7 +588,7 @@ func (siw *ServerInterfaceWrapper) GetDocumentation(w http.ResponseWriter, r *ht
 func (siw *ServerInterfaceWrapper) GetConfig(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.GetConfig(w, r)
@@ -708,7 +717,7 @@ func (siw *ServerInterfaceWrapper) GetConnections(w http.ResponseWriter, r *http
 
 	var err error
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	// Parameter object where we will unmarshal all parameters from the context
 	var params GetConnectionsParams
@@ -755,7 +764,7 @@ func (siw *ServerInterfaceWrapper) DeleteConnection(w http.ResponseWriter, r *ht
 		return
 	}
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	// Parameter object where we will unmarshal all parameters from the context
 	var params DeleteConnectionParams
@@ -802,7 +811,7 @@ func (siw *ServerInterfaceWrapper) GetConnection(w http.ResponseWriter, r *http.
 		return
 	}
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.GetConnection(w, r, id)
@@ -830,7 +839,7 @@ func (siw *ServerInterfaceWrapper) DeleteConnectionCredentials(w http.ResponseWr
 		return
 	}
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.DeleteConnectionCredentials(w, r, id)
@@ -858,7 +867,7 @@ func (siw *ServerInterfaceWrapper) RevokeConnectionCredentials(w http.ResponseWr
 		return
 	}
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.RevokeConnectionCredentials(w, r, id)
@@ -877,7 +886,7 @@ func (siw *ServerInterfaceWrapper) GetCredentials(w http.ResponseWriter, r *http
 
 	var err error
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	// Parameter object where we will unmarshal all parameters from the context
 	var params GetCredentialsParams
@@ -921,7 +930,7 @@ func (siw *ServerInterfaceWrapper) GetCredentials(w http.ResponseWriter, r *http
 func (siw *ServerInterfaceWrapper) CreateCredential(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.CreateCredential(w, r)
@@ -940,7 +949,7 @@ func (siw *ServerInterfaceWrapper) GetLinks(w http.ResponseWriter, r *http.Reque
 
 	var err error
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	// Parameter object where we will unmarshal all parameters from the context
 	var params GetLinksParams
@@ -976,7 +985,7 @@ func (siw *ServerInterfaceWrapper) GetLinks(w http.ResponseWriter, r *http.Reque
 func (siw *ServerInterfaceWrapper) CreateLink(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.CreateLink(w, r)
@@ -1054,7 +1063,7 @@ func (siw *ServerInterfaceWrapper) DeleteLink(w http.ResponseWriter, r *http.Req
 		return
 	}
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.DeleteLink(w, r, id)
@@ -1082,7 +1091,7 @@ func (siw *ServerInterfaceWrapper) GetLink(w http.ResponseWriter, r *http.Reques
 		return
 	}
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.GetLink(w, r, id)
@@ -1110,7 +1119,7 @@ func (siw *ServerInterfaceWrapper) AcivateLink(w http.ResponseWriter, r *http.Re
 		return
 	}
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.AcivateLink(w, r, id)
@@ -1208,8 +1217,19 @@ func (siw *ServerInterfaceWrapper) GetRevocationStatus(w http.ResponseWriter, r 
 		return
 	}
 
+	// Parameter object where we will unmarshal all parameters from the context
+	var params GetRevocationStatusParams
+
+	// ------------- Optional query parameter "state_hash" -------------
+
+	err = runtime.BindQueryParameter("form", true, false, "state_hash", r.URL.Query(), &params.StateHash)
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "state_hash", Err: err})
+		return
+	}
+
 	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.GetRevocationStatus(w, r, nonce)
+		siw.Handler.GetRevocationStatus(w, r, nonce, params)
 	})
 
 	for _, middleware := range siw.HandlerMiddlewares {
@@ -1234,7 +1254,7 @@ func (siw *ServerInterfaceWrapper) RevokeCredential(w http.ResponseWriter, r *ht
 		return
 	}
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.RevokeCredential(w, r, nonce)
@@ -1262,7 +1282,7 @@ func (siw *ServerInterfaceWrapper) DeleteCredential(w http.ResponseWriter, r *ht
 		return
 	}
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.DeleteCredential(w, r, id)
@@ -1290,7 +1310,7 @@ func (siw *ServerInterfaceWrapper) GetCredential(w http.ResponseWriter, r *http.
 		return
 	}
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.GetCredential(w, r, id)
@@ -1335,7 +1355,7 @@ func (siw *ServerInterfaceWrapper) GetSchemas(w http.ResponseWriter, r *http.Req
 
 	var err error
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	// Parameter object where we will unmarshal all parameters from the context
 	var params GetSchemasParams
@@ -1363,7 +1383,7 @@ func (siw *ServerInterfaceWrapper) GetSchemas(w http.ResponseWriter, r *http.Req
 func (siw *ServerInterfaceWrapper) ImportSchema(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.ImportSchema(w, r)
@@ -1391,7 +1411,7 @@ func (siw *ServerInterfaceWrapper) GetSchema(w http.ResponseWriter, r *http.Requ
 		return
 	}
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.GetSchema(w, r, id)
@@ -1408,7 +1428,7 @@ func (siw *ServerInterfaceWrapper) GetSchema(w http.ResponseWriter, r *http.Requ
 func (siw *ServerInterfaceWrapper) PublishState(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.PublishState(w, r)
@@ -1425,7 +1445,7 @@ func (siw *ServerInterfaceWrapper) PublishState(w http.ResponseWriter, r *http.R
 func (siw *ServerInterfaceWrapper) RetryPublishState(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.RetryPublishState(w, r)
@@ -1442,7 +1462,7 @@ func (siw *ServerInterfaceWrapper) RetryPublishState(w http.ResponseWriter, r *h
 func (siw *ServerInterfaceWrapper) GetStateStatus(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.GetStateStatus(w, r)
@@ -1459,7 +1479,7 @@ func (siw *ServerInterfaceWrapper) GetStateStatus(w http.ResponseWriter, r *http
 func (siw *ServerInterfaceWrapper) GetStateTransactions(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
+	ctx = context.WithValue(ctx, BasicAuthScopes, []string{""})
 
 	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.GetStateTransactions(w, r)
@@ -2468,7 +2488,8 @@ func (response CreateLinkQrCode500JSONResponse) VisitCreateLinkQrCodeResponse(w 
 }
 
 type GetRevocationStatusRequestObject struct {
-	Nonce PathNonce `json:"nonce"`
+	Nonce  PathNonce `json:"nonce"`
+	Params GetRevocationStatusParams
 }
 
 type GetRevocationStatusResponseObject interface {
@@ -3010,8 +3031,9 @@ type StrictServerInterface interface {
 	GetStateTransactions(ctx context.Context, request GetStateTransactionsRequestObject) (GetStateTransactionsResponseObject, error)
 }
 
-type StrictHandlerFunc = runtime.StrictHttpHandlerFunc
-type StrictMiddlewareFunc = runtime.StrictHttpMiddlewareFunc
+type StrictHandlerFunc func(ctx context.Context, w http.ResponseWriter, r *http.Request, args interface{}) (interface{}, error)
+
+type StrictMiddlewareFunc func(f StrictHandlerFunc, operationID string) StrictHandlerFunc
 
 type StrictHTTPServerOptions struct {
 	RequestErrorHandlerFunc  func(w http.ResponseWriter, r *http.Request, err error)
@@ -3667,10 +3689,11 @@ func (sh *strictHandler) CreateLinkQrCode(w http.ResponseWriter, r *http.Request
 }
 
 // GetRevocationStatus operation middleware
-func (sh *strictHandler) GetRevocationStatus(w http.ResponseWriter, r *http.Request, nonce PathNonce) {
+func (sh *strictHandler) GetRevocationStatus(w http.ResponseWriter, r *http.Request, nonce PathNonce, params GetRevocationStatusParams) {
 	var request GetRevocationStatusRequestObject
 
 	request.Nonce = nonce
+	request.Params = params
 
 	handler := func(ctx context.Context, w http.ResponseWriter, r *http.Request, request interface{}) (interface{}, error) {
 		return sh.ssi.GetRevocationStatus(ctx, request.(GetRevocationStatusRequestObject))
